--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,21 @@ baseurl: ""
 url: "https://AmlanDas1998.github.io"
 repository: "AmlanDas1998/amlandas.in"
 
-theme: minimal-mistakes-jekyll
-minimal_mistakes_skin: default
+# Theme settings
+remote_theme: mmistakes/minimal-mistakes
+minimal_mistakes_skin: "default"
 
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-include-cache
 
+markdown: kramdown
+
 defaults:
   - scope:
       path: ""
-      type: "posts"
+      type: posts
     values:
       layout: single
       author_profile: true
@@ -25,12 +28,11 @@ defaults:
       share: true
       related: true
 
-markdown: kramdown
-# Add this to your _config.yml if not already added
+# Navigation (Navbar)
 nav:
   - title: "Home"
-    url: /
+    url: "/"
   - title: "About"
-    url: /about/
+    url: "/about/"
   - title: "CV"
-    url: /cv/
+    url: "/cv/"
