--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Amlan Das"
 email: "contact@amlandas.in"
 description: "CV and blogs by Amlan Das"
-baseurl: ""
+baseurl: "/amlandas.in"
 url: "https://AmlanDas1998.github.io"
 repository: "AmlanDas1998/amlandas.in"
 
